add placeholder in serach bar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <select name="category" id="category">
                         <option value="All">All</option>
                     </select>
-                    <input type="text" name="search" id="search-text-bar">
+                    <input type="text" name="search" id="search-text-bar" placeholder="Search Amazon.in">
                     <div class="search-icon"><i class='fas fa-search'></i></div>
                 </form>
             </div>
